discussion/kv_engine/151323/151323_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Test

Change-Id: I44cbfcda0beb01302b37246d2ee9c9caa3b47b3a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-04-15 20:27:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-15 20:28:17.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30023/ : ABORTED

CMake error: platform/CMakeLists.txt:43 (message) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30023/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30023/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34995/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34995/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10034/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9896/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9896/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17813/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17813/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8965/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8965/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10269/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10269/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8373/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/memcached.cc:1605:16: error: no member named "release" in "folly::EventBase" [clang-diagnostic-error]
    main_base->release();
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8373/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/memcached.cc:1605:16:
error: no member named "release" in "folly::EventBase" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8373/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6920/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
